--- a/jira-automation/config_legit.json
+++ b/jira-automation/config_legit.json
@@ -407,24 +407,33 @@
 	"_comment_step_1_transition": {
 		"_title": "---------------------------------------- Step 1: Transitions ----------------------------------------",
 		"_description": "Transitions or status fields sometimes put action restricitons on tickets. ID's are unique across entire JIRA server for a transition",
+		"_description2": "id, key, name refers to next available status/transition (id, description, name in Jira), allowed_transition refers to status (name in Jira) from which next transition is allowed",
 		"_json_limitations": "Array element count unlimited"
 	},
 	"Transition": [
 		{
+			"id": 871,
 			"key": "Set to completed",
-			"id": 871
+			"name": "Completed",
+			"allowed_transition": "Reopened"
 		},
 		{
+			"id": 811,
 			"key": "Set to reopened",
-			"id": 811
+			"name": "Reopened",
+			"allowed_transition": "Completed"
 		},
 		{
+			"id": 211,
 			"key": "Back to Open",
-			"id": 211
+			"name": "Open",
+			"allowed_transition": "In Progress"
 		},
 		{
+			"id": 11,
 			"key": "In Progress",
-			"id": 11
+			"name": "In Progress",
+			"allowed_transition": "Open"
 		}
 	],
 	"_comment_step_1_version": {
